[CW16]
* SyncProxyAndroid SDK: prevent crashing of the application when trying to send a request with large bulk data.

[CW15]
* Fix (protocol v1): don't send initialization requests when switching to already registered app from another screen (on HMI).
* Fix an incorrect app name when the phone is using Russian locale.

[CW14]
+ Add an option to the startup screen: "Set app icon after registration".
* PerformInteraction dialog: allow to select multiple choice set IDs.
* Show dialog: add extra fields.
+ Allow to send test requests when the app is not registered.
+ Add GUI for PerformInteraction message.

[CW12]
* UpdateTurnList dialog: change the way how Turn items are parsed from the GUI.
+ Add an option to disable screen locking while doing XML tests. It can be toggled in the options menu, "Lock screen while testing" item. The change will NOT affect currently running tests, if any.
* Fix: remove all the commands that were added to the submenu when it's deleted.
+ ModuleTest: the user can now specify the source data for a PutFile request as a filename (with path starting at "/sdcard/") or a Base64-encoded string (starting with "base64:").
* Fix crash when integer fields are empty in the following dialogs: Alert, PerformAudioPassThru, ReadDID, GetDTCs, ShowConstantTBT, Slider, and SetGlobalProperties.

[CW11]
+ (Experimental) ModuleTest: allow to test the responses to Register/UnregisterAppInterface requests. The SyncProxyAndroid SDK had to be patched to let the responses propagate to the SyncProxyTester app.

[CW10]
* ModuleTest: increase the delay between sending consecutive requests to 1 sec.
+ Display the requests sent by the app on connection in the log.
* SetGlobalProperties dialog: allow to send helpPrompt and timeoutPrompt as arrays.
* Fix CreateInteractionChoiceSet, SetGlobalProperties, and Speak layouts.

[CW9]
* Fix: don't send a Show request on OnHMIStatus after an Alert response.
* ModuleTest: add a delay between sending consecutive requests.